--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -16,11 +16,11 @@
    },
    "source": [
     "---\n",
-    "layout: base\n",
+    "layout: post\n",
     "title: Classes and Constructors Homework\n",
     "description:  Classes and Constructors Homework\n",
     "categories: [Javascript, Homework]\n",
-    "permalink: /Javascript/classes-constructors-Homework\n",
+    "permalink: /classes-constructors-HW\n",
     "author: Makers\n",
     "---"
    ]
@@ -33,11 +33,56 @@
     "# JavaScript Classes and Constructors Homework\n",
     "By now you should have a decent grasp of classes and constructors, and how to make and build one. The following exercises should help you solidify your understanding of classes and constructors in JavaScript."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4be7bd0a",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "source": [
+    "# Popcorn Hack 1\n",
+    "1. The class TennisPlayer has been defined for you. Create a constructor with the arguements name, rank, and rankPoints.\n",
+    "2. Define a method that ouputs the following to the console: \"Hi my name is <name>, my rank is <rank>, and my rankings points are <rankingsPoints>.\n",
+    "3. Call the class with the arguments Novak Djokovic, 1, 16000. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7399ab93",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    " \n",
+    "class TennisPlayer {\n",
+    "    constructor(name, rank, rankPoints) {\n",
+    "        // Add code here\n",
+    "    };\n",
+    "    profile () {\n",
+    "        //Finish this output: console.log();\n",
+    "    }\n",
+    "\n",
+    "};\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
