update lesson and HW

--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cookie-clicker",
    "metadata": {
     "vscode": {
@@ -244,7 +244,7 @@
     "        this.cps = cps;\n",
     "        this.cost = cost;\n",
     "    }\n",
-    "    info() {\n",
+    "    info() { //this is a method that prints the cookies per second and costs\n",
     "        console.log(this.name, `produces`, this.cps, `cookies per second and costs`, this.cost, `cookies.`);\n",
     "    }\n",
     "}\n",
