--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -72,6 +72,77 @@
     "\n",
     "};\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "847cedc1",
+   "metadata": {},
+   "source": [
+    "# Popcorn Hack 2\n",
+    "\n",
+    "1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d1fadb",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "Expand your Cookie Clicker project:\n",
+    "- Create an `Upgrade` class that multiplies cookies per click.\n",
+    "- Modify your `CookieClicker` class constructor to accept an array of `Upgrade`s.\n",
+    "- Print how each upgrade changes the total cookie output.\n",
+    "\n",
+    "The following code is to help you get started."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9c84d6f",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "class CookieClicker {\n",
+    "  constructor(upgrades = []) {\n",
+    "    this.cookies = 0;\n",
+    "    this.cookiesPerClick = 1;\n",
+    "    this.upgrades = upgrades;\n",
+    "\n",
+    "    // Apply upgrade bonuses\n",
+    "    this.upgrades.forEach(upg => {\n",
+    "      this.cookiesPerClick *= upg.multiplier || 1;\n",
+    "    });\n",
+    "  }\n",
+    "\n",
+    "  click() {\n",
+    "    this.cookies += this.cookiesPerClick;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class Upgrade {\n",
+    "  constructor(name, multiplier) {\n",
+    "    this.name = name;\n",
+    "    this.multiplier = multiplier;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "const upgrades = [\n",
+    "  new Upgrade(\"Golden Cursor\", 2),\n",
+    "  new Upgrade(\"Magic Oven\", 3)\n",
+    "];\n",
+    "\n",
+    "const game = new CookieClicker(upgrades);\n",
+    "game.click();\n",
+    "console.log(`Cookies after 1 click: ${game.cookies} (per click: ${game.cookiesPerClick})`);"
+   ]
   }
  ],
  "metadata": {
