--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "source": [
     "## Creating Multiple Instances\n",
-    "You can make multiple objects (or **instances**) from the same class.\n"
+    "You can make multiple objects (or **instances**) from the same class. This may be of use in game development when you want to have many different characters with similar properties.\n"
    ]
   },
   {
@@ -187,6 +187,67 @@
     "\n",
     "player1.greet();\n",
     "player2.greet();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce26bb96",
+   "metadata": {},
+   "source": [
+    "## Classes inside classes\n",
+    "\n",
+    "Much like math, where you have composite functions such as f(g(x)), you can have classes inside of classes. **However, each class can only have one constructor.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "414a4004",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "class Player {\n",
+    "    constructor(name, score) {\n",
+    "        this.name = name;\n",
+    "        this.score = score;\n",
+    "        this.stats = new Player.Stats(0, 0); // create a Stats object for each Player\n",
+    "    }\n",
+    "\n",
+    "    greet() {\n",
+    "        console.log(`Hi! My name is ${this.name} and my score is ${this.score}!`);\n",
+    "    }\n",
+    "\n",
+    "    // inner class\n",
+    "    static Stats = class {\n",
+    "        constructor(wins, losses) {\n",
+    "            this.wins = wins;\n",
+    "            this.losses = losses;\n",
+    "        }\n",
+    "\n",
+    "        recordWin() {\n",
+    "            this.wins++;\n",
+    "        }\n",
+    "\n",
+    "        recordLoss() {\n",
+    "            this.losses++;\n",
+    "        }\n",
+    "\n",
+    "        showRecord() {\n",
+    "            console.log(`Wins: ${this.wins}, Losses: ${this.losses}`);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Example usage\n",
+    "const player1 = new Player(\"Ishan\", 120);\n",
+    "player1.greet();\n",
+    "player1.stats.recordWin();\n",
+    "player1.stats.showRecord();\n"
    ]
   },
   {
