--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -80,7 +80,65 @@
    "source": [
     "# Popcorn Hack 2\n",
     "\n",
-    "1. "
+    "1. Create a class called library\n",
+    "2. Within library create a class called book with two methods - add book and remove book\n",
+    "3. Add another inner class called computers - and have it output the number of computers on\n",
+    "\n",
+    "Below is the starter code to get you started"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7bad2b3",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Step 1: Create the main class called Library\n",
+    "class Library {\n",
+    "    constructor(name) {\n",
+    "        this.name = name;\n",
+    "        console.log(`📚 Welcome to the ${this.name} Library!`);\n",
+    "    }\n",
+    "\n",
+    "    // Step 2: Create an inner class called Book\n",
+    "    static Book = class {\n",
+    "        constructor() {\n",
+    "            this.books = []; // store book titles\n",
+    "        }\n",
+    "\n",
+    "        // TODO: Create a method addBook(title)\n",
+    "        // Hint: push the title to this.books and log a message\n",
+    "\n",
+    "        // TODO: Create a method removeBook(title)\n",
+    "        // Hint: remove the book from the array if it exists\n",
+    "    }\n",
+    "\n",
+    "    // Step 3: Create another inner class called Computers\n",
+    "    static Computers = class {\n",
+    "        constructor(numberOn) {\n",
+    "            this.numberOn = numberOn;\n",
+    "        }\n",
+    "\n",
+    "        // TODO: Create a method to show how many computers are currently on\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// --- Example Usage ---\n",
+    "// Uncomment after writing your methods!\n",
+    "\n",
+    "// const myLibrary = new Library(\"Downtown\");\n",
+    "// const bookManager = new Library.Book();\n",
+    "// const techRoom = new Library.Computers(8);\n",
+    "\n",
+    "// bookManager.addBook(\"The Hobbit\");\n",
+    "// bookManager.addBook(\"1984\");\n",
+    "// bookManager.removeBook(\"The Hobbit\");\n",
+    "// techRoom.showComputersOn();\n"
    ]
   },
   {
