--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -102,7 +102,7 @@
     "class Library {\n",
     "    constructor(name) {\n",
     "        this.name = name;\n",
-    "        console.log(`📚 Welcome to the ${this.name} Library!`);\n",
+    "        console.log(`Welcome to the`, this.name, `Library!`);\n",
     "    }\n",
     "\n",
     "    // Step 2: Create an inner class called Book\n",
@@ -199,7 +199,7 @@
     "\n",
     "const game = new CookieClicker(upgrades);\n",
     "game.click();\n",
-    "console.log(`Cookies after 1 click: ${game.cookies} (per click: ${game.cookiesPerClick})`);"
+    "console.log(`Cookies after 1 click:`, game.cookies, `(per click:`, game.cookiesPerClick + `)`);"
    ]
   }
  ],
