--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
@@ -191,67 +191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce26bb96",
-   "metadata": {},
-   "source": [
-    "## Classes inside classes\n",
-    "\n",
-    "Much like math, where you have composite functions such as f(g(x)), you can have classes inside of classes. **However, each class can only have one constructor.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "414a4004",
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%javascript\n",
-    "class Player {\n",
-    "    constructor(name, score) {\n",
-    "        this.name = name;\n",
-    "        this.score = score;\n",
-    "        this.stats = new Player.Stats(0, 0); // create a Stats object for each Player\n",
-    "    }\n",
-    "\n",
-    "    greet() {\n",
-    "        console.log(`Hi! My name is ${this.name} and my score is ${this.score}!`);\n",
-    "    }\n",
-    "\n",
-    "    // inner class\n",
-    "    static Stats = class {\n",
-    "        constructor(wins, losses) {\n",
-    "            this.wins = wins;\n",
-    "            this.losses = losses;\n",
-    "        }\n",
-    "\n",
-    "        recordWin() {\n",
-    "            this.wins++;\n",
-    "        }\n",
-    "\n",
-    "        recordLoss() {\n",
-    "            this.losses++;\n",
-    "        }\n",
-    "\n",
-    "        showRecord() {\n",
-    "            console.log(`Wins: ${this.wins}, Losses: ${this.losses}`);\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Example usage\n",
-    "const player1 = new Player(\"Ishan\", 120);\n",
-    "player1.greet();\n",
-    "player1.stats.recordWin();\n",
-    "player1.stats.showRecord();\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "real-world-connection",
    "metadata": {},
    "source": [
@@ -279,6 +218,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98443d3f",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "class Building {\n",
+    "    constructor(name, cps, cost) { // cps = cookies per second\n",
+    "        this.name = name;\n",
+    "        this.cps = cps;\n",
+    "        this.cost = cost;\n",
+    "    }\n",
+    "    info() { //this is a method that prints the cookies per second and costs\n",
+    "        console.log(this.name, `produces`, this.cps, `cookies per second and costs`, this.cost, `cookies.`);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "const bakery = new Building('Bakery', 1, 50);\n",
+    "const factory = new Building('Factory', 10, 500);\n",
+    "\n",
+    "bakery.info();\n",
+    "factory.info();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce26bb96",
+   "metadata": {},
+   "source": [
+    "## Classes inside classes\n",
+    "\n",
+    "Much like math, where you have composite functions such as f(g(x)), you can have classes inside of classes. **However, each class can only have one constructor.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cookie-clicker",
    "metadata": {
     "vscode": {
@@ -299,22 +278,43 @@
    ],
    "source": [
     "%%javascript\n",
-    "class Building {\n",
-    "    constructor(name, cps, cost) { // cps = cookies per second\n",
+    "class Player {\n",
+    "    constructor(name, score) {\n",
     "        this.name = name;\n",
-    "        this.cps = cps;\n",
-    "        this.cost = cost;\n",
+    "        this.score = score;\n",
+    "        this.stats = new Player.Stats(0, 0); // create a Stats object for each Player\n",
     "    }\n",
-    "    info() { //this is a method that prints the cookies per second and costs\n",
-    "        console.log(this.name, `produces`, this.cps, `cookies per second and costs`, this.cost, `cookies.`);\n",
+    "\n",
+    "    greet() {\n",
+    "        console.log(`Hi! My name is`, this.name, `and my score is`, this.score + `!`);\n",
+    "    }\n",
+    "\n",
+    "    // inner class\n",
+    "    static Stats = class {\n",
+    "        constructor(wins, losses) {\n",
+    "            this.wins = wins;\n",
+    "            this.losses = losses;\n",
+    "        }\n",
+    "\n",
+    "        recordWin() {\n",
+    "            this.wins++;\n",
+    "        }\n",
+    "\n",
+    "        recordLoss() {\n",
+    "            this.losses++;\n",
+    "        }\n",
+    "\n",
+    "        showRecord() {\n",
+    "            console.log(`Wins:`, this.wins, `Losses:`, this.losses);\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
-    "const bakery = new Building('Bakery', 1, 50);\n",
-    "const factory = new Building('Factory', 10, 500);\n",
-    "\n",
-    "bakery.info();\n",
-    "factory.info();"
+    "// Example usage\n",
+    "const player1 = new Player(\"Ishan\", 120);\n",
+    "player1.greet();\n",
+    "player1.stats.recordWin();\n",
+    "player1.stats.showRecord();\n"
    ]
   }
  ],
