--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -147,11 +147,15 @@
    "metadata": {},
    "source": [
     "# Homework\n",
-    "Expand your Cookie Clicker project:\n",
-    "- Create an `Upgrade` class that multiplies cookies per click.\n",
-    "- Modify your `CookieClicker` class constructor to accept an array of `Upgrade`s.\n",
-    "- Print how each upgrade changes the total cookie output.\n",
+    "Create and expand the Cookie Clicker project:\n",
+    "1. Fill out the cookies and cookiesPerClick variables.\n",
+    "2. Define what should happen upon clicking the cookie.\n",
+    "3. Create an `Upgrade` class that multiplies cookies per click, and expand the original cookieclicker class to integrate upgardes.\n",
+    "5. Print how each upgrade changes the total cookie output.\n",
+    "6. Add a cookie type variable which sets the specific type of cookie (ex: Chocolate chip, Oatmeal, etc.)\n",
     "\n",
+    "## Extra credit: Up to 0.03 points\n",
+    "- Create a new cell, apply the ALL of the above changes to a blank cookie clicker project, and submit that code for the cookie clicker project.\n",
     "The following code is to help you get started."
    ]
   },
@@ -170,36 +174,14 @@
     "\n",
     "class CookieClicker {\n",
     "  constructor(upgrades = []) {\n",
-    "    this.cookies = 0;\n",
-    "    this.cookiesPerClick = 1;\n",
-    "    this.upgrades = upgrades;\n",
-    "\n",
-    "    // Apply upgrade bonuses\n",
-    "    this.upgrades.forEach(upg => {\n",
-    "      this.cookiesPerClick *= upg.multiplier || 1;\n",
-    "    });\n",
+    "    this.cookies = ____; //start value\n",
+    "    this.cookiesPerClick = ____;\n",
     "  }\n",
     "\n",
     "  click() {\n",
-    "    this.cookies += this.cookiesPerClick;\n",
+    "    // Add code here to increase cookies by cookiesPerClick;\n",
     "  }\n",
-    "}\n",
-    "\n",
-    "class Upgrade {\n",
-    "  constructor(name, multiplier) {\n",
-    "    this.name = name;\n",
-    "    this.multiplier = multiplier;\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "const upgrades = [\n",
-    "  new Upgrade(\"Golden Cursor\", 2),\n",
-    "  new Upgrade(\"Magic Oven\", 3)\n",
-    "];\n",
-    "\n",
-    "const game = new CookieClicker(upgrades);\n",
-    "game.click();\n",
-    "console.log(`Cookies after 1 click:`, game.cookies, `(per click:`, game.cookiesPerClick + `)`);"
+    "}\n"
    ]
   }
  ],
