--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -28,7 +28,114 @@
     }
    },
    "source": [
-    "*Javascript Strings"
+    "*Javascript Strings*\n",
+    "**What are strings?**\n",
+    "Strings are a data type used to represent text and store them within quotes. They are sequences of characters enclosed in single quotes (' '), double quotes (\" \"), or backticks (` `). Strings can contain letters, numbers, symbols, and spaces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c59f06a",
+   "metadata": {},
+   "source": [
+    "**Examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ce3119d",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let carName = \"Toyota\";\n",
+    "let carModel = \"Corolla\";\n",
+    "let carYear = 2016;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2749af54",
+   "metadata": {},
+   "source": [
+    "Strings can work with both single and double quotes, there is no difference.\n",
+    "Strings can also include quotes inside quotes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e17a552f",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let carModel = \"Corolla\";\n",
+    "let carModel2 = 'Prius';\n",
+    "let carModel3 = '\"Rav4\"';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe50b99",
+   "metadata": {},
+   "source": [
+    "Strings in the Cookie Clicker Game are existent everywhere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4753aa",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "const grandma = {\n",
+    "  name: \"Grandma\",\n",
+    "  emoji: \"👵\",\n",
+    "  price: 69,\n",
+    "  priceIncrementer: 1.5,\n",
+    "  cookiesPerSecond: 1,\n",
+    "};\n",
+    "\n",
+    "const chef = {\n",
+    "  name: \"Chef\",\n",
+    "  emoji: \"👨‍🍳\",\n",
+    "  price: 200,\n",
+    "  priceIncrementer: 1.4,\n",
+    "  cookiesPerSecond: 2,\n",
+    "};\n",
+    "\n",
+    "const kitchen = {\n",
+    "  name: \"Kitchen\",\n",
+    "  emoji: \"🔪\",\n",
+    "  price: 400,\n",
+    "  priceIncrementer: 1.4,\n",
+    "  cookiesPerSecond: 4,\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "299dc2dc",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "In this example, there are three examples of strings: \"Grandma\", \"Chef\", and \"Kitchen\"."
    ]
   }
  ],
