--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -28,8 +28,8 @@
     }
    },
    "source": [
-    "*Javascript Strings*\n",
-    "**What are strings?**\n",
+    "#Javascript Strings\n",
+    "##What are strings?\n",
     "Strings are a data type used to represent text and store them within quotes. They are sequences of characters enclosed in single quotes (' '), double quotes (\" \"), or backticks (` `). Strings can contain letters, numbers, symbols, and spaces."
    ]
   },
@@ -38,7 +38,7 @@
    "id": "0c59f06a",
    "metadata": {},
    "source": [
-    "**Examples:"
+    "#Examples:"
    ]
   },
   {
