--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -62,7 +62,8 @@
    "id": "2749af54",
    "metadata": {},
    "source": [
-    "Strings can work with both single and double quotes, there is no difference.\n",
+    "Strings can work with single, double, and backquotes, there is no difference.\n",
+    "Strings are meant to be stored in variables. \"Let\" and \"const\" are common variables that store strings.\n",
     "Strings can also include quotes inside quotes."
    ]
   },
@@ -79,7 +80,8 @@
    "source": [
     "let carModel = \"Corolla\";\n",
     "let carModel2 = 'Prius';\n",
-    "let carModel3 = '\"Rav4\"';"
+    "let carModel3 = '\"Rav4\"';\n",
+    "const carModel4 = `Highlander`;"
    ]
   },
   {
@@ -123,7 +125,11 @@
     "  price: 400,\n",
     "  priceIncrementer: 1.4,\n",
     "  cookiesPerSecond: 4,\n",
-    "};"
+    "};\n",
+    "\n",
+    "const shopButton = document.createElement(\"button\");\n",
+    "        shopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\n",
+    "        shopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;"
    ]
   },
   {
@@ -135,7 +141,13 @@
     }
    },
    "source": [
-    "In this example, there are three examples of strings: \"Grandma\", \"Chef\", and \"Kitchen\"."
+    "In this example, there are *eight* examples of strings: \"Grandma\", \"Chef\", and \"Kitchen\". All three examples are under the variable: \"const\".\n",
+    "The other *three* examples, \"👵\", \"👨‍🍳\", and \"🔪\", are examples of strings as emojis. \n",
+    "The final *two* examples of strings use the backtick quotes: \n",
+    "`bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`\n",
+    "and\n",
+    "`${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`\n",
+    "that store data of the const: shopButton."
    ]
   }
  ],
