--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -24,7 +24,7 @@
    "id": "b0f73322",
    "metadata": {},
    "source": [
-    "# JavaScript Classes and Constructors Homework\n",
+    "## <u>JavaScript Classes and Constructors Homework<u>\n",
     "By now you should have a decent grasp of classes and constructors, and how to make and build one. The following exercises should help you solidify your understanding of classes and constructors in JavaScript."
    ]
   },
