--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "---\n",
-    "layout: base\n",
+    "layout: post\n",
     "title: Makers - Classes and Constructors JS Lesson\n",
     "description: Classes and Constructors lesson with Cookie Clicker\n",
     "permalink: /Javascript/classes-constructors-lesson\n",
