--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Classes-constructors-cookieclicker.ipynb
@@ -122,9 +122,30 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nclass Player {\n    constructor(name, score) {\n        this.name = name;\n        this.score = score;\n    }\n    greet() {\n        console.log(`Hi! My name is`,  this.name, `and my score is`, this.score +`!`);\n    }\n}\n\n// Create a new Player object\nconst player1 = new Player('Alex', 42);\nplayer1.greet();\n",
+      "text/html": [
+       "<div id=\"output-area\"></div>\n",
+       "\n",
+       "<script>\n",
+       "class Player {\n",
+       "    constructor(name, score) {\n",
+       "        this.name = name;\n",
+       "        this.score = score;\n",
+       "    }\n",
+       "\n",
+       "    greet() {\n",
+       "        const message = `Hi! My name is ${this.name} and my score is ${this.score}!`;\n",
+       "        console.log(message);\n",
+       "        document.getElementById('output-area').innerText += message + \"\\n\";\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "// Create a new Player object\n",
+       "const player1 = new Player('Alex', 42);\n",
+       "player1.greet();\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -140,13 +161,14 @@
     "        this.score = score;\n",
     "    }\n",
     "    greet() {\n",
-    "        console.log(`Hi! My name is`,  this.name, `and my score is`, this.score +`!`);\n",
+    "        const message = `Hi! My name is ${this.name} and my score is ${this.score}!`;\n",
+    "        console.log(message);\n",
     "    }\n",
     "}\n",
     "\n",
     "// Create a new Player object\n",
     "const player1 = new Player('Alex', 42);\n",
-    "player1.greet(); // Output: Hi! My name is Alex and my score is 42!"
+    "player1.greet(); // Output: Hi! My name is Alex and my score is 42!\n"
    ]
   },
   {
@@ -334,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
