--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -15,7 +15,7 @@
     "description:  Classes and Constructors Homework\n",
     "categories: [Javascript, Homework]\n",
     "permalink: /classes-constructors-HW\n",
-    "author: Makers\n",
+    "author: Ishan Jha, Dhruv Agarwal, Angelina Tuchinskaya\n",
     "---"
    ]
   },
