--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors.ipynb
@@ -15,7 +15,7 @@
     "description: Classes and Constructors lesson with Cookie Clicker\n",
     "permalink: /Javascript/classes-constructors-lesson\n",
     "categories: [Javascript, Classes and Methods]\n",
-    "author: Makers\n",
+    "author: Ishan Jha, Dhruv Agarwal, Angelina Tuchinskaya\n",
     "---"
    ]
   },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "constructor-example",
    "metadata": {
     "vscode": {
@@ -122,30 +122,9 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div id=\"output-area\"></div>\n",
-       "\n",
-       "<script>\n",
-       "class Player {\n",
-       "    constructor(name, score) {\n",
-       "        this.name = name;\n",
-       "        this.score = score;\n",
-       "    }\n",
-       "\n",
-       "    greet() {\n",
-       "        const message = `Hi! My name is ${this.name} and my score is ${this.score}!`;\n",
-       "        console.log(message);\n",
-       "        document.getElementById('output-area').innerText += message + \"\\n\";\n",
-       "    }\n",
-       "}\n",
-       "\n",
-       "// Create a new Player object\n",
-       "const player1 = new Player('Alex', 42);\n",
-       "player1.greet();\n",
-       "</script>\n"
-      ],
+      "application/javascript": "\nclass Player {\n    constructor(name, score) {\n        this.name = name;\n        this.score = score;\n    }\n    greet() {\n        const message = `Hi! My name is ${this.name} and my score is ${this.score}!`;\n        console.log(message);\n    }\n}\n\n// Create a new Player object\nconst player1 = new Player('Alex', 42);\nplayer1.greet(); // Output: Hi! My name is Alex and my score is 42!\n",
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.core.display.Javascript object>"
       ]
      },
      "metadata": {},
