--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -97,7 +97,7 @@
    "id": "0c876db9",
    "metadata": {},
    "source": [
-    "What are template literals?\n",
+    "# What are template literals?\n",
     "- Template literals are enclosed by backticks (``)\n",
     "- Template literals and strings have three different functions:\n",
     "    - 1. Can create multi-line strings\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "eef28891",
    "metadata": {
     "vscode": {
@@ -124,21 +124,23 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3979239522.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mconst multilineString =\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
+     "data": {
+      "application/javascript": "const multilineString = `\nThis is an example of a multi-line string.\nYou can write as much as you want here.\nThis is useful for writing paragraphs or long text.\n`;\nconsole.log(multilineString);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "const multilineString =\n",
-    "```\n",
+    "%%javascript\n",
+    "const multilineString = `\n",
     "This is an example of a multi-line string.\n",
     "You can write as much as you want here.\n",
     "This is useful for writing paragraphs or long text.\n",
-    "```;\n",
+    "`;\n",
     "console.log(multilineString);"
    ]
   },
@@ -161,6 +163,7 @@
    },
    "outputs": [],
    "source": [
+    "shopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\n",
     "shopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;"
    ]
   },
@@ -169,7 +172,17 @@
    "id": "b33dac1d",
    "metadata": {},
    "source": [
-    "This is a great example of **string interpolation** in the Cookie Clicker Game. It uses the syntax: ${}for the variables emoji, name, and price to be plugged. Template literals allow for variables to be placed inside the string."
+    "This is a great example of **string interpolation** in the Cookie Clicker Game. \n",
+    "- It uses the syntax: ${}for the variables emoji, name, and price to be plugged. Template literals allow for variables to be placed inside the string.\n",
+    "- The className button doesn't need to have the backtick, but provides clarity and consistency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18967c61",
+   "metadata": {},
+   "source": [
+    "# Variables in Cookie CLicker Game"
    ]
   },
   {
